--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,20 +1,19 @@
 
 
-<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
-
+<div style="display: block;width: 100%;background: #cadbeb;padding: 4em 0;">
 <%= render 'hp_about' %>
+</div>
 
 <%= render 'hp_whats_new' %>
 
 <%= render 'hp_feed_the_dog' %>
 
+<div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
 <%= render 'hp_calendar' %>
+</div>
 
 <%= render 'hp_galleries' %>
 
+<div style="display: block;width: 100%;background: #b78d03;padding: 4em 0;">
 <%= render 'hp_sponsors' %>
+</div>
