--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,23 @@
-<div style="display: block;width: 100%;background: #cadbeb;padding: 4em 0;">
+<div style="display: block;width: 100%;background: url('/uploads/images/devildog_logo_big.png') center center no-repeat #cadbeb;padding: 5em 0;">
 <%= render 'hp_about' %>
 </div>
 
+<div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
 <%= render 'hp_whats_new' %>
+</div>
 
+<div style="display: block;width: 100%;background: #b78d03;padding: 4em 0;">
 <%= render 'hp_feed_the_dog' %>
+</div>
 
 <div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
 <%= render 'hp_calendar' %>
 </div>
 
+<div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
 <%= render 'hp_galleries' %>
+</div>
 
-<div style="display: block;width: 100%;background: #b78d03;padding: 4em 0;">
+<div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
 <%= render 'hp_sponsors' %>
 </div>
