added model to track dues reminders sent

--- a/app/views/dues_payments/show.html.erb
+++ b/app/views/dues_payments/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :sidebar do %>
 
-<%= button_to "Send Dues Reminder", dues_reminder_path(:id => @dues_payment) %></div>
+<%= button_to "Send Dues Reminder", send_dues_reminder_path(:id => @dues_payment) %></div>
 
 <% end %>
 
