updated member application form to handle error of member already exisitng

--- a/app/views/members/_user_fields_application.html.erb
+++ b/app/views/members/_user_fields_application.html.erb
@@ -5,7 +5,7 @@
     <%= f.text_field :email, :size => '20'  %>
   </div>
     <%= f.hidden_field :username, :size => '20'  %>
-    <% if @member.user.username.nil? %>
+    <% if @member.user.id.nil? %>
       <%= f.hidden_field :password, :value => 'welcome_1'  %>
     <% end %>
   </div>
