--- a/app/views/pages/member_home.html.erb
+++ b/app/views/pages/member_home.html.erb
@@ -10,10 +10,17 @@
 
 <h1>Member Home</h1>
 <hr />
+<% if !@dues_paid.blank? %>
 <h2>Membership Dues:</h2>
 
 <p>Current records indicate you last paid dues: <strong><%= @dues_paid.date_paid.strftime("%b %d, %Y") %></strong>. If you feel this is in error, please contact the Finance Officer.</p>
 <hr />
+<% else %>
+<h2>Membership Dues:</h2>
+
+<p>We currently do not have dues information recorded in your online account. If you feel this is in error, please contact the Finance Officer.</p>
+
+<% end %>
 <h2>Your Upcoming Trips:</h2>
 
 <% if @member.event_signups.future.empty? %>
