added cadet to membership renewal

--- a/app/views/pages/membership.html.erb
+++ b/app/views/pages/membership.html.erb
@@ -29,12 +29,14 @@ Georgetown, TX 78628</div></p>
 <tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
 	<option value="Annual Dues">Annual Dues $75.00 USD</option>
 	<option value="Add $2 to cover CC fee">Add $2 to cover CC fee $77.00 USD</option>
+	<option value="Cadet Annual Dues">Cadet Annual Dues $45.00 USD</option>
 </select> </td></tr>
 </table>
 <input type="hidden" name="currency_code" value="USD">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 
 </td>
 
