updated map urls to https

--- a/app/views/pages/squadron.html.erb
+++ b/app/views/pages/squadron.html.erb
@@ -35,7 +35,7 @@
 209 Corsair Drive<br />
 Georgetown, TX 78628</p>
 
-<p>[<a href="http://maps.google.com/maps?q=30.685441,+-97.675667">Google Map</a>]</p>
+<p>[<a href="https://maps.google.com/maps?q=30.685441,+-97.675667">Google Map</a>]</p>
 
 </blockquote>
            
