--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -82,7 +82,7 @@
 <p><b>What:</b> <%= @event.event_type.title%></p>
 
   <% if @event.location.latitude? %>
-    <div style="float: right; border: 1px solid #ccc; margin: 0 0 1em 1em;"><%= link_to image_tag(map_url), "http://maps.google.com/maps?q="+@event.location.latitude+",+"+@event.location.longitude, :target => "_blank" %></div>
+    <div style="float: right; border: 1px solid #ccc; margin: 0 0 1em 1em;"><%= link_to image_tag(map_url), "https://maps.googleapis.com/maps/api/location="+@event.location.latitude+",+"+@event.location.longitude, :target => "_blank" %></div>
   <% end %>
   
 <p><b>Where:</b> <%= @event.location.short_name %> - <%= @event.location.city %>, <%= @event.location.state %></p>
