--- a/app/views/layouts/map_layout.html.erb
+++ b/app/views/layouts/map_layout.html.erb
@@ -20,7 +20,7 @@
   <%= favicon_link_tag '/favicon-96x96.png', :rel => 'icon', :type => 'image/png', :sizes => '96x96' %>
   <%= favicon_link_tag '/favicon-16x16.png', :rel => 'icon', :type => 'image/png', :sizes => '16x16' %>
 
-    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
+    <script src="https://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
       type="text/javascript"></script>
     <script type="text/javascript">
     var map;
