changed event etails to markdown

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -119,7 +119,7 @@
 <% end %>
 
 <% if @event.details? %>
-  <p><%= simple_format(@event.details) %></p>
+  <p><%= markdown @event.details %></p>
 <% end %>
   
 <div style="clear: both;"></div>
