--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -2,12 +2,12 @@
   <script src="https://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig"
       type="text/javascript"></script>
 
-  <% map_url = "https://maps.googleapis.com/maps/api/staticmap?zoom=8&size=275x190&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@event.location.latitude+","+@event.location.longitude+"&sensor=false&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig" %>
+  <% map_url = "https://maps.googleapis.com/maps/api/staticmap?zoom=8&size=275x190&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@location.latitude+","+@location.longitude+"&sensor=false&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig" %>
 
   <p><strong><%= @location.short_name %> - <%= @location.city %>, <%= @location.state %></strong></p>
 
   <% if @location.latitude? %>
-    <div style="float: right; border: 1px solid #ccc; margin: 1em 0 1em 1em;"><%= link_to image_tag(map_url), "https://www.google.com/maps/search/?api=1&query="+@event.location.latitude+","+@event.location.longitude, :target => "_blank" %></div>
+    <div style="float: right; border: 1px solid #ccc; margin: 1em 0 1em 1em;"><%= link_to image_tag(map_url), "https://www.google.com/maps/search/?api=1&query="+@location.latitude+","+@location.longitude, :target => "_blank" %></div>
   <% end %>
 <% end %>
 
