--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -113,7 +113,7 @@
         </ul>
       <% end %>
 <% else %>
- Rides not available at this event. Check for other <%= link_to "upcoming ride opportunities", living_flight_history_experience_path %>.</p>
+ Rides not available at this event. Check for other <%= link_to "upcoming ride opportunities", living_history_flight_experience_path %>.</p>
     <% end %>
 
     <% if @event.URL? %>
@@ -138,7 +138,9 @@
   <% if @event.location.latitude? %>
     <div class="map-image">
     <%= link_to image_tag(map_url.html_safe), raw("https://www.google.com/maps/place/" + @event.location.latitude + ' ' + @event.location.longitude + "/@" + @event.location.latitude + "," + @event.location.longitude + ",13z/"), :target => "_blank" %>
-                                                   
+    <%= link_to image_tag("http://vfrmap.com/api?req=map&type=sectc&lat=" + @event.location.latitude + "&lon=" + @event.location.longitude + "&zoom=10&width=350&height=350"), raw("http://vfrmap.com/?type=vfrc&lat=" + @event.location.latitude + "&lon=" + @event.location.longitude + "&zoom=11"), :target => "_blank" %>
+    
+    
     </div>
 
 
