--- a/app/views/events/_event_details.html.erb
+++ b/app/views/events/_event_details.html.erb
@@ -50,6 +50,6 @@
 <p style="margin: 3em 0 0 0;"><b>Where:</b> <%= @event.location.short_name %> - <%= @event.location.city %>, <%= @event.location.state %></p>
 
   <% if @event.location.latitude? %>
-    <div style="float: right; border: 1px solid #ccc; margin: 1em 0 1em 1em;"><%= link_to image_tag(map_url), "https://maps.googleapis.com/maps/api/staticmap?zoom=8&size=200x200&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@event.location.latitude+","+@event.location.longitude+"&sensor=false&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig" :target => "_blank" %></div>
+    <div style="float: right; border: 1px solid #ccc; margin: 1em 0 1em 1em;"><%= link_to image_tag(map_url), "https://maps.googleapis.com/maps/api/staticmap?zoom=8&size=200x200&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@event.location.latitude+","+@event.location.longitude+"&sensor=false&key=AIzaSyBTLIEMHnR7-4zunQEj0NYdn0r8e7_fkig", :target => "_blank" %></div>
   <% end %>
   
