updates to member welcome email

--- a/app/views/membership_added_notifier/created.text.erb
+++ b/app/views/membership_added_notifier/created.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @member.first_name %>,
 
-Welcome aboard. I have added you to the  Devil Dog Squadron website members list.
+Welcome aboard. Your membership information has been activated on the Devil Dog Squadron website.
 
 You should be able to use the lost password function, outlined in the members Login document (attached), to set your password.
 
