--- a/app/views/membership_added_notifier/created.html.erb
+++ b/app/views/membership_added_notifier/created.html.erb
@@ -1,6 +1,6 @@
 <p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Hi <%= @member.first_name %>,</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Welcome aboard. Your information has been added you to the  Devil Dog Squadron website members list.</p>
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">Welcome aboard. Your membership information has been activated on the Devil Dog Squadron website.</p>
 
 <p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">You should be able to use the lost password function, outlined in the members Login document (attached), to set your password.</p>
 
