update dues notifier for new Finance Officer

--- a/app/views/dues_payment_notifier/created.html.erb
+++ b/app/views/dues_payment_notifier/created.html.erb
@@ -11,7 +11,7 @@
   209 Corsair Drive<br />
   Georgetown, TX 78628</p>
 
-<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">or hand deliver to Beth Jenkins or Gregg Peterson.</p>
+<p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">or hand deliver to Beth Jenkins or Earnie Henderson.</p>
 
 <p style="font-size: 12pt; font-family: Helvetica, Verdana, Geneva, Arial, sans-serif; color: #191919;">If you have already made your dues payment please disregard this auto-generated notice. Your membership should be updated soon.</p>
 
