--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -19,7 +19,7 @@
   <%= favicon_link_tag '/favicon-32x32.png', :rel => 'icon', :type => 'image/png', :sizes => '32x32' %>
   <%= favicon_link_tag '/favicon-96x96.png', :rel => 'icon', :type => 'image/png', :sizes => '96x96' %>
   <%= favicon_link_tag '/favicon-16x16.png', :rel => 'icon', :type => 'image/png', :sizes => '16x16' %>
-
+<meta name="google-site-verification" content="bDCd2KypL07hC0KWnjy0SK9rdQe7Ey6E_608grWInkA" />
 </head>
 <body>
 
