--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,54 +1,46 @@
-<a name="nav"></a>
-
-<div class="menu-link">
-  <%= link_to image_tag("devildog_logo.png", :alt => "Devil Dog Squadron"), "/" %>
-  <div style="margin-top: 0.75em;"><a href="#nav">menu</a></div>
-</div>
-
-<div class="login-bar">
-  <% if user_signed_in? %>
-    Welcome: <%= current_user.member.first_name + ' ' + current_user.member.last_name %> | 
-    <%= link_to current_user.email, member_path(current_user.member) %> | 
-    Last login: <%= current_user.last_sign_in_at.strftime('%H:%M on %m/%d/%y') %> | 
-    <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>
-  <% else %>
-    <%= link_to 'Member Login', login_path %>
-  <% end %>
-</div>
-
-<ul>
-  <% @main_menu.each do |menu| %>
-    <li class="dropdown" ><a href="<%= menu.url %>" class="dropdown-toggle"><%= menu.display %></a>
-    <% if @sub_menu.collect(&:parent_id).include?(menu.id) %>
-      <% if menu.display != "Members" %>
-        <ul class="dropdown-menu">
-          <% @sub_menu.each do |submenu| %>
-            <% if submenu.parent_id == menu.id %>
-              <li><a href="<%= submenu.url %>"><%= submenu.display %></a></li>
-            <% end %>
-          <% end %>
-        </ul>
-      <% elsif menu.display == "Members" %>
-        <% if signed_in?%>
-          <% if current_user.roles.any? {|role| role.name == "member"} %>
-            <ul class="dropdown-menu">
+<div class="navbar navbar_ navbar-default">
+  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+    <span class="sr-only">Toggle navigation</span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+  </button>
+  <div class="navbar-collapse navbar-collapse_ collapse">
+    <ul class="nav navbar-nav sf-menu clearfix">
+    <% @main_menu.each do |menu| %>
+      <li class="dropdown" ><a href="<%= menu.url %>" class="dropdown-toggle"><%= menu.display %></a>
+      <% if @sub_menu.collect(&:parent_id).include?(menu.id) %>
+        <% if menu.display != "Members" %>
+          <ul class="dropdown-menu">
             <% @sub_menu.each do |submenu| %>
               <% if submenu.parent_id == menu.id %>
-                <% if submenu.display != "Admin" %>
-                  <li><a href="<%= submenu.url %>"><%= submenu.display %></a></li>
-                <% elsif submenu.display == "Admin" %>
-                  <% if current_user.roles.any? {|role| role.name == "admin"} %>
+                <li><a href="<%= submenu.url %>"><%= submenu.display %></a></li>
+              <% end %>
+            <% end %>
+          </ul>
+        <% elsif menu.display == "Members" %>
+          <% if signed_in?%>
+            <% if current_user.roles.any? {|role| role.name == "member"} %>
+              <ul class="dropdown-menu">
+              <% @sub_menu.each do |submenu| %>
+                <% if submenu.parent_id == menu.id %>
+                  <% if submenu.display != "Admin" %>
                     <li><a href="<%= submenu.url %>"><%= submenu.display %></a></li>
+                  <% elsif submenu.display == "Admin" %>
+                    <% if current_user.roles.any? {|role| role.name == "admin"} %>
+                      <li><a href="<%= submenu.url %>"><%= submenu.display %></a></li>
+                    <% end %>
                   <% end %>
                 <% end %>
               <% end %>
+              </ul>
             <% end %>
-            </ul>
           <% end %>
         <% end %>
       <% end %>
+      </li>
     <% end %>
-    </li>
-  <% end %>
-</ul>
-
+    </ul>
+    </div>
+  </div>
+</div>
