added past_due view

--- a/app/views/dues_payments/dues_reminders_past_due_list.html.erb
+++ b/app/views/dues_payments/dues_reminders_past_due_list.html.erb
@@ -18,7 +18,7 @@ function getCellValue(row, index){ return $(row).children('td').eq(index).html()
 
 </script>
 
-<h1>Dues Payment Reminder List</h1>
+<h1>Dues Payment Past Due Reminder List</h1>
 
 <p>Qty: <%= @dues_reminders.size %></p>
 
