--- a/app/views/dues_payments/index.html.erb
+++ b/app/views/dues_payments/index.html.erb
@@ -38,14 +38,14 @@ function getCellValue(row, index){ return $(row).children('td').eq(index).html()
     <th>Notes</th>
   </tr>
 
-<% @dues_reminders.each do |dues_reminder| %>
+<% @dues_payments.each do |dues_payment| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
-    <td><%= link_to dues_reminder.member.last_name + ', ' + dues_reminder.member.first_name, dues_payment %></td>
-    <td><%= dues_reminder.date_paid %></td>
-    <td><%= dues_reminder.payment_method %></td>
-    <td><%= dues_reminder.payment_type %></td>
-    <td><%= number_to_currency(dues_reminder.amt_paid) %></td>
-    <td><%= dues_reminder.notes %></td>
+    <td><%= link_to dues_payment.member.last_name + ', ' + dues_payment.member.first_name, dues_payment %></td>
+    <td><%= dues_payment.date_paid %></td>
+    <td><%= dues_payment.payment_method %></td>
+    <td><%= dues_payment.payment_type %></td>
+    <td><%= number_to_currency(dues_payment.amt_paid) %></td>
+    <td><%= dues_payment.notes %></td>
   </tr>
 <% end %>
 </table>
