--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,23 +1,23 @@
-<div style="display: block;width: 100%;background: url('/uploads/images/devildog_logo_big.png') center center no-repeat #cadbeb;padding: 5em 0;">
+<div class="hp-about">
 <%= render 'hp_about' %>
 </div>
 
-<div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
+<div class="hp-news">
 <%= render 'hp_whats_new' %>
 </div>
 
-<div style="display: block;width: 100%;background: #b78d03;padding: 4em 0;">
+<div class="hp-donations">
 <%= render 'hp_feed_the_dog' %>
 </div>
 
-<div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
+<div class="hp-events">
 <%= render 'hp_calendar' %>
 </div>
 
-<div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
+<div class="hp-gallery">
 <%= render 'hp_galleries' %>
 </div>
 
-<div style="display: block;width: 100%;background: #fff;padding: 4em 0;">
+<div class="hp-sponsors">
 <%= render 'hp_sponsors' %>
 </div>
