--- a/app/assets/stylesheets/screen/scaffolds.css.scss
+++ b/app/assets/stylesheets/screen/scaffolds.css.scss
@@ -2,14 +2,14 @@ body {
   background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 18px;
+  line-height: 1.4em;
 }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 18px;
+  line-height: 1.4em;
 }
 
 pre {
