--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -11,9 +11,9 @@
 
 <div id="container">
 
-<nav>
+  <%= render 'layouts/header' %>
   <%= render 'layouts/nav' %>
-</nav>
+
 
 
     <div class="flexslider">
@@ -22,7 +22,7 @@
           <img src="/assets/fly_teaser.jpg" alt="">
           <div class="flex-caption">
             <div class="flex-caption_inner">
-              <div class="txt1">FLY THE DEVIL DOG</div>
+              <div class="txt1"><strong>FLY THE DEVIL DOG</strong></div>
               <div class="txt2">Checkout upcoming opportunities</div>
               <div class="txt3"><a href="/living_history_flight_experience" class="btn btn-primary">Fly the Dog</a></div>
             </div>
@@ -32,7 +32,7 @@
           <img src="/assets/slider_vintage.jpg" alt="">
           <div class="flex-caption">
             <div class="flex-caption_inner">
-              <div class="txt1">Giving History a Future</div>
+              <div class="txt1"><strong>Giving History a Future</strong></div>
               <div class="txt2">Learn about the history of PBJ's</div>
               <div class="txt3"><a href="/PBJs" class="btn btn-primary">PBJ History</a></div>
             </div>
@@ -42,7 +42,7 @@
           <img src="/assets/hdr_nose.jpg" alt="">
           <div class="flex-caption">
             <div class="flex-caption_inner">
-              <div class="txt1">The PX is always open!</div>
+              <div class="txt1"><strong>The PX is always open!</strong></div>
               <div class="txt2">Show your support with Devil Dog items</div>
               <div class="txt3"><a href="/px" class="btn btn-primary">Go to PX</a></div>
             </div>
@@ -52,7 +52,7 @@
           <img src="/assets/slider_maintenance.jpg" alt="">
           <div class="flex-caption">
             <div class="flex-caption_inner">
-              <div class="txt1">Maintenance</div>
+              <div class="txt1"><strong>Maintenance</strong></div>
               <div class="txt2">What's it take to make a Dog fly?</div>
               <div class="txt3"><a href="#" class="btn btn-primary">Maintenance</a></div>
             </div>
